recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:2: error: '<-' expected but integer literal found.
 for (i 1 <- 4){
        ^FourSquare:13: error: illegal start of simple expression
} 
^